--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 鸟窝
 subtitle:
 description:
 keywords:
-author: John Doe
+author: JianSheng Ou
 language:
 timezone:
 
